[project]
name = "rag-tuto"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chromadb>=1.5.9",
    "docx2txt>=0.9",
    "faiss-cpu>=1.14.2",
    "ipykernel>=7.3.0",
    "jq>=1.11.0",
    "langchain>=1.3.7",
    "langchain-classic>=1.0.8",
    "langchain-community>=0.4.2",
    "langchain-experimental>=0.4.2",
    "langchain-groq>=1.1.3",
    "langchain-huggingface>=1.2.2",
    "langchain-ollama>=1.1.0",
    "langchain-openai>=1.3.0",
    "langchain-text-splitters>=1.1.2",
    "langgraph>=1.2.4",
    "matplotlib>=3.10.9",
    "openpyxl>=3.1.5",
    "pandas>=3.0.3",
    "pdfminer>=20191125",
    "pymupdf>=1.27.2.3",
    "pyopenssl>=26.3.0",
    "pypdf>=6.13.2",
    "python-docx>=1.2.0",
    "python-dotenv>=1.2.2",
    "rank-bm25>=0.2.2",
    "sentence-transformers>=5.5.1",
    "tiktoken>=0.13.0",
    "unstructured>=0.23.0",
    "wikipedia>=1.4.0",
]
